--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -23,8 +23,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/caraText"
         android:layout_marginTop="17dp"
-        android:max="30"
-        android:progress="5" />
+        android:max="50"
+        android:progress="41" />
 
     <TextView
         android:id="@+id/ojosText"
@@ -44,7 +44,16 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ojosText"
         android:layout_marginTop="17dp"
-        android:max="30"
-        android:progress="5" />
+        android:max="50"
+        android:progress="46" />
+
+    <Button
+        android:id="@+id/ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ojos"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="ok" />
 
 </RelativeLayout>
